# data_analysts_back

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DOCKER.md  DOCKER_QUICKSTART.md  DOCKER_SUCCESS.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  POSTMAN_TESTING_GUIDE.md  README.md  deploy.ps1  deploy.sh  docker-build.ps1  docker-build.sh  docker-compose.yml  main.py  pyproject.toml  sample_data.csv  setup_check.py  test_api_manual.py  test_json_parsing.py
.github/: copilot-instructions.md
app/: main.py
app/controllers/: __init__.py
app/controllers/v1/: __init__.py  charts.py  ingest.py
app/core/: config.py  exceptions.py  utils.py
app/models/schemas/: chart.py  ingest.py
app/services/: bedrock_service.py  chart_transform_service.py  data_analyzer.py  file_parser.py  ingest_service.py
app/utils/: chart_formatting.py
docs/: AGENT_RESPONSE_FORMATTING.md  CHART_DATA_PROCESSING.md  CHART_TRANSFORMATION_GUIDE.md  CHART_TRANSFORM_DATASET_TESTING.md  DEV_MODE.md  DEV_MODE_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  JSON_PARSING_IMPROVEMENTS.md  POSTMAN_TESTING_GUIDE.md  POSTMAN_TESTING_GUIDE.md.backup  QUICK_REFERENCE_FORMATTING.md  TESTING_SUMMARY.md  instructions.md
tests/: conftest.py  format_agent_response.py  test_api.py  test_auto_formatting.py  test_chart_formatting.py  test_chart_processing.py  test_chart_transform_request.json  test_chart_with_data.py  test_charts.py  test_data_analyzer.py  test_file_parser.py  test_formatted_request.json  test_ingest_with_dataset.py  test_utils.py
